# NTK

./: .gitignore  cnn.py  main.py  ntk.py  papers.md  pyproject.toml  simple_mlp.py  test.ipynb  util.py
