[project]
name = "ntk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.13.2",
    "foolbox>=3.3.4",
    "jax-meta>=1.0.3",
    "jax[cuda13]>=0.8.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "polars>=1.36.1",
    "scikit-learn>=1.7.2",
    "torchvision>=0.24.1",
]
